--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "node-red-contrib-ibmpush":"0.x",
         "node-red-contrib-bluemix-hdfs":"0.x",
         "node-red-nodes-cf-sqldb-dashdb":"0.x",
-        "node-red-contrib-objectstore":"0.x"
+        "node-red-contrib-objectstore":" 0.0.27"
     },
     "engines": {
         "node": "0.12.x"
