--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "redis":"~0.10.1",
         "node-red": "0.x",
         "require":"2.4.x",
+        "request":"2.x.x",
         "node-red-bluemix-nodes":"1.x",
         "node-red-node-watson":"0.x",
         "node-red-node-openwhisk":"0.x",
