--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "node-red-contrib-ibmpush":"0.x",
         "node-red-contrib-bluemix-hdfs":"0.x",
         "node-red-nodes-cf-sqldb-dashdb":"0.x",
-        "node-red-contrib-objectstore":" 0.0.27"
+        "node-red-contrib-objectstore":" 0.0.27",
+        "node-red-contrib-ui_j":"1.x.x"
     },
     "engines": {
         "node": "4.5.x",
